# Claw

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
archive/todoist-telegram/: README.md  config.js  ecosystem.config.js  message_formatter.js  package.json  scheduler.js  telegram_sender.js  todoist_fetcher.js
claw/: __init__.py  audit.py  briefing.py  claude_client.py  config.py  detectors.py  fitness.py  goals.py  listener.py  main.py  memory.py  nightly.py  orchestrator.py  probe.py  prompts.py  selection.py  situation.py  synthesis.py  telegram_client.py  todoist_client.py  trajectory.py  watchlist.py  weekly.py
config/: config.example.yaml
docker/: crontab
docs/: BUILD_LOG.md  DECISIONS.md  PROMPTS.md
scripts/: deploy.sh  run_briefing.sh  run_listener.sh  run_probe.sh
tests/integration/: test_integration.py
tests/unit/: test_backup.py  test_buttons.py  test_capture.py  test_core.py  test_listener.py  test_measurement.py  test_memory.py  test_nightly.py  test_orchestrator.py  test_probe.py  test_trajectory.py  test_watchlist.py  test_weekly.py
