[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claw"
version = "0.1.0"
description = "Emotionally intelligent personal assistant"
requires-python = ">=3.11"
# Pinned to known-good majors with upper bounds: the live deployment already runs
# openai 2.x, so the bound guards the *next* breaking major rather than freezing
# an exact patch. Bump deliberately.
dependencies = [
    "openai>=2.41,<3.0",
    "requests>=2.34,<3.0",
    "python-dotenv>=1.2,<2.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-mock>=3.15,<4.0",
]

[project.scripts]
claw = "claw.main:main"
claw-briefing = "claw.briefing:main"
claw-probe = "claw.probe:main"
claw-orchestrator = "claw.orchestrator:main"
claw-listener = "claw.listener:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require live credentials)",
]
# Run unit tests by default; integration tests require: pytest -m integration
addopts = "-m 'not integration'"

[tool.setuptools.packages.find]
where = ["."]
include = ["claw*"]
